--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,1 +1,8 @@
-<h1>Index Page</h1>
+<sebm-google-map [latitude]="latA" [longitude]="lngA" [zoom]="12">
+    <sebm-google-map-polyline>
+        <sebm-google-map-polyline-point *ngFor="let item of markers; let i = index" [latitude]="item.lat" [longitude]="item.lng">
+        </sebm-google-map-polyline-point>
+        <sebm-google-map-marker *ngFor="let item of markers; let i = index" [latitude]="item.lat" [longitude]="item.lng" [label]="item.label">
+        </sebm-google-map-marker>
+    </sebm-google-map-polyline>
+</sebm-google-map>
