--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,6 +1,6 @@
 <sebm-google-map [latitude]="latA" [longitude]="lngA" [zoom]="12">
        <div *ngIf="_show.data">
-            <sebm-google-map-marker *ngFor="let item of markers; let i = index" [latitude]="item.delivery_latitude" [longitude]="item.delivery_longitude" [label]="item.label">
+            <sebm-google-map-marker *ngFor="let item of markers; let i = index" [latitude]="item.delivery_latitude" [longitude]="item.delivery_longitude" >
                 <sebm-google-map-info-window>
                     <strong>{{item.order_id}}</strong>: {{item.delivery_address}} 
                 </sebm-google-map-info-window>
@@ -9,7 +9,7 @@
 
        <sebm-google-map-polyline>
         <div *ngIf="_show.routes">
-            <sebm-google-map-polyline-point  *ngFor="let item of markers; let i = index" [latitude]="item.delivery_latitude" [longitude]="item.delivery_longitude"></sebm-google-map-polyline-point>
+            <sebm-google-map-polyline-point  *ngFor="let item of trails; let i = index" [latitude]="item.lat" [longitude]="item.lng"></sebm-google-map-polyline-point>
         </div>
     </sebm-google-map-polyline>
     
