--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -19,3 +19,52 @@
 <button class="btn-default" style="border-radius: 10px;" (click)="showData()">Get Data</button>
 <button class="btn-default" style="border-radius: 10px;" (click)="generateRoutes()">Generate Routes</button>
 <button class="btn-default" style="border-radius: 10px;">Save</button>
+<br>
+<div class="column">
+    <div class="col-xs-1 text-center">
+        <h6>Vehicle_a</h6>
+        <div class="vehicle-id-container vehicle-a">110668</div>
+        <div class="vehicle-id-container vehicle-a">110686</div>
+        <div class="vehicle-id-container vehicle-a">110658</div>
+        <div class="vehicle-id-container vehicle-a">110702</div>
+        <div class="vehicle-id-container vehicle-a">110681</div>
+        <div class="vehicle-id-container vehicle-a">110767</div>
+        
+    </div>
+    <div class="col-xs-1 text-center">
+        <h6>Vehicle_b</h6>
+        <div class="vehicle-id-container vehicle-b">110704</div>
+        <div class="vehicle-id-container vehicle-b">110747</div>
+        <div class="vehicle-id-container vehicle-b">110733</div>
+        <div class="vehicle-id-container vehicle-b">110666</div>
+        <div class="vehicle-id-container vehicle-b">110798</div>
+        <div class="vehicle-id-container vehicle-b">110701</div>
+    </div>
+     <div class="col-xs-1 text-center">
+        <h6>Vehicle_c</h6>
+        <div class="vehicle-id-container vehicle-c">110690</div>
+        <div class="vehicle-id-container vehicle-c">110810</div>
+        <div class="vehicle-id-container vehicle-c">110696</div>
+        <div class="vehicle-id-container vehicle-c">110734</div>
+        <div class="vehicle-id-container vehicle-c">110762</div>
+        <div class="vehicle-id-container vehicle-c">110622</div>
+    </div>
+    <div class="col-xs-1 text-center">
+        <h6>Vehicle_d</h6>
+        <div class="vehicle-id-container vehicle-d">110659</div>
+        <div class="vehicle-id-container vehicle-d">110743</div>
+        <div class="vehicle-id-container vehicle-d">110678</div>
+        <div class="vehicle-id-container vehicle-d">110730</div>
+        <div class="vehicle-id-container vehicle-d">110757</div>
+        <div class="vehicle-id-container vehicle-d">110732</div>
+    </div>
+    <div class="col-xs-1 text-center">
+        <h6>Vehicle_e</h6>
+        <div class="vehicle-id-container vehicle-e">110519</div>
+        <div class="vehicle-id-container vehicle-e">110676</div>
+        <div class="vehicle-id-container vehicle-e">110671</div>
+        <div class="vehicle-id-container vehicle-e">110426</div>
+        <div class="vehicle-id-container vehicle-e">110977</div>
+        <div class="vehicle-id-container vehicle-e">110609</div>
+    </div>
+</div>
