--- a/src/app/components/index/index.component.less
+++ b/src/app/components/index/index.component.less
@@ -1,3 +1,23 @@
 .sebm-google-map-container {
   height: 80%;
 }
+.vehicle-id-container {
+  padding: 2px;
+  margin: 2px;
+  border-radius: 10px;
+}
+.vehicle-a {
+  background-color: #b4c695;
+}
+.vehicle-b {
+  background-color: #dfc194;
+}
+.vehicle-c {
+  background-color: #b498ca;
+}
+.vehicle-d{
+  background-color: #fffd79;
+}
+.vehicle-e {
+  background-color: #98c4c4;
+}
